# netease-square-dance-downloader

./: .env.example  .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
scripts/: fetch_vendor.sh
src/: cli.py  dedupe.py  downloader.py  login.py  manifest.py  netease_client.py  runner.py  sanitize.py  search.py
tests/: test_dedupe.py  test_downloader.py  test_integration.py  test_manifest.py  test_netease_client.py  test_runner.py  test_sanitize.py  test_search.py
tests/fixtures/: square_dance_titles.txt
