[project]
name = "music163download"
version = "0.1.0"
description = "Batch downloader for Netease square-dance music to USB drive"
requires-python = ">=3.11"
dependencies = [
  "playwright>=1.40",
  "requests>=2.31",
  "tenacity>=8.2",
  "python-dotenv>=1.0",
  "typer>=0.9",
  "rich>=13.0",
  "pycryptodome>=3.18",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.12"]

[project.scripts]
music163 = "src.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
